Add proper typeahead support.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link href="jumbotron-narrow.css" rel="stylesheet">
+    <link href="typeahead.css" rel="stylesheet">
 
 </head>
 
@@ -118,6 +119,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="typeahead.min.js"></script>
 <script src="bundle.js"></script>
 </body>
 
